# ai-lint

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
ai_lint/: __init__.py  checker.py  cli.py  config.py  sessions.py  setup_hook.py  spinner.py
ai_lint/templates/: policy_parent.md  policy_self.md  policy_team.md
homebrew/: ai-lint.rb
tests/: conftest.py  test_checker.py  test_cli.py  test_config.py  test_sessions.py  test_setup_hook.py
