[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lint"
version = "0.3.3"
description = "Check AI coding session compliance against user-defined policies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Aryan Shukla" }]
keywords = ["ai", "lint", "claude", "compliance", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
ai-lint = "ai_lint.cli:main"

[project.urls]
Homepage = "https://github.com/aryanshukla/ai-lint"
Issues = "https://github.com/aryanshukla/ai-lint/issues"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ai_lint*"]

[tool.setuptools.package-data]
ai_lint = ["templates/*.md"]
